--- a/front-end/contato.html
+++ b/front-end/contato.html
@@ -14,15 +14,15 @@
       <img class="me-3" width="50" height="auto" src="../imagens/logo.svg" alt="">
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li class="nav-item rounded"><a href="index.html" class="nav-link text-dark">Home</a></li>
-        <li class="nav-item"><a href="projetos.html" class="nav-link text-dark">Projetos</a></li>
-        <li class="nav-item"><a href="sobre.html" class="nav-link text-dark">Sobre</a></li>
+        <li class="nav-item rounded"><a href="../front-end/index.html" class="nav-link text-dark">Home</a></li>
+        <li class="nav-item"><a href="../front-end/projetos.html" class="nav-link text-dark">Projetos</a></li>
+        <li class="nav-item"><a href="../front-end/sobre.html" class="nav-link text-dark">Sobre</a></li>
         <li class="nav-item"><a href="" class="nav-link text-dark border rounded-pill">Contato</a></li>
       </ul>
 
       <div class="text-end">
-        <a href="login.html"><button type="button" class="btn btn-outline-dark me-2">Login</button></a>
-        <a href="cadastro.html"><button type="button" class="btn btn-outline-dark">Sign-up</button></a>
+        <a href="../front-end/login.html"><button type="button" class="btn btn-outline-dark me-2">Login</button></a>
+        <a href="../front-end/cadastro.html"><button type="button" class="btn btn-outline-dark">Sign-up</button></a>
       </div>
     </div>
   </nav>
@@ -73,7 +73,7 @@
     <div class="border-top">
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 container">
         <div class="col mb-3">
-          <a href="index.html" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
+          <a href="../front-end/index.html" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="imagens/logo.svg"></use></svg>
           </a>
           <p class="text-body-secondary">© 2023</p>
