--- a/front-end/index.html
+++ b/front-end/index.html
@@ -18,14 +18,14 @@
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li class="nav-item rounded"><a href="#" class="nav-link text-dark border rounded-pill">Home</a></li>
-        <li class="nav-item"><a href="projetos.html" class="nav-link text-dark">Projetos</a></li>
-        <li class="nav-item"><a href="sobre.html" class="nav-link text-dark">Sobre</a></li>
-        <li class="nav-item"><a href="contato.html" class="nav-link text-dark">Contato</a></li>
+        <li class="nav-item"><a href="../front-end/projetos.html" class="nav-link text-dark">Projetos</a></li>
+        <li class="nav-item"><a href="../front-end/sobre.html" class="nav-link text-dark">Sobre</a></li>
+        <li class="nav-item"><a href="../front-end/contato.html" class="nav-link text-dark">Contato</a></li>
       </ul>
 
       <div class="text-end">
-        <a href="login.html"><button type="button" class="btn btn-outline-dark me-2">Login</button></a>
-        <a href="cadastro.html"><button type="button" class="btn btn-outline-dark">Sign-up</button></a>
+        <a href="../front-end/login.html"><button type="button" class="btn btn-outline-dark me-2">Login</button></a>
+        <a href="../front-end/cadastro.html"><button type="button" class="btn btn-outline-dark">Sign-up</button></a>
       </div>
     </div>
   </nav>
@@ -39,7 +39,7 @@
           <h2 class="featurette-heading fw-normal lh-1">Todos por um</h2>
           <p class="lead">Somos uma organização comprometida por um propósito: promover a inclusão social. Nossa missão é clara e inspiradora: unir esforços para auxiliar e facilitar na inserção de pessoas na sociedade, independentemente de origens ou circunstâncias pessoais.</p>
         </div>
-        <img  src="imagens/pexels-alexander-grey-1148998.jpg" class="img-fluid rounded w-50" alt="Imagem">
+        <img  src="../imagens/pexels-alexander-grey-1148998.jpg" class="img-fluid rounded w-50" alt="Imagem">
     </div>
 
     </header>
@@ -49,15 +49,15 @@
       <h2>Nossos objetivos</h2>
       <div class="row padding-top p-3 objetivos">
         <div class="col-lg-4 d-flex flex-column align-items-center">
-          <img src="imagens/pexels-mohammad-sameer-13115817.jpg" class="img-fluid rounded-circle" width="150" height="150"></img>
+          <img src="../imagens/pexels-mohammad-sameer-13115817.jpg" class="img-fluid rounded-circle" width="150" height="150"></img>
           <h4 class="text-center padding-top p-3">Fornecer assistência  acessível</h4>
         </div>
         <div class="col-lg-4 d-flex flex-column align-items-center">
-          <img src="imagens/pexels-mohammad-sameer-13115817.jpg" class="img-fluid rounded-circle" width="150" height="150"></img>
+          <img src="../imagens/pexels-mohammad-sameer-13115817.jpg" class="img-fluid rounded-circle" width="150" height="150"></img>
           <h4 class="text-center padding-top p-3">consseguir ajudar as pessoas em maior vulnerabilidade</h4>
         </div>
         <div class="col-lg-4 d-flex flex-column align-items-center">
-          <img src="imagens/pexels-mohammad-sameer-13115817.jpg" class="img-fluid rounded-circle" width="150" height="150"></img>
+          <img src="../imagens/pexels-mohammad-sameer-13115817.jpg" class="img-fluid rounded-circle" width="150" height="150"></img>
           <h4 class="text-center padding-top p-3">Ampliar o alcance e a conscientização</h4>
         </div>
       </div>
@@ -68,7 +68,7 @@
   <div class=" flex-column w-25 p-5">
     <h4>Nossos Projetos</h4>
     <p>Movida pela convicção de que a inclusão social é construída através de ações concretas. E vizando isso nos desenvolvemos uma serie de projetos, </p>
-    <a href="projetos.html">Veja todos os projetos aqui</a> 
+    <a href="../front-end/projetos.html">Veja todos os projetos aqui</a> 
   </div>
   <div class=" flex-column w-25 p-5">
     <h4>Principal Projeto </h4>
@@ -88,7 +88,7 @@
     <div class="container">
       <footer class="d-flex flex-row justify-content-around align-items-center border-top ml-1">
         <div class="col mb-3">
-          <a href="index.html" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
+          <a href="../front-end/index.html" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="imagens/logo.svg"></use></svg>
           </a>
           <p class="text-body-secondary">© 2023</p>
