--- a/front-end/sobre.html
+++ b/front-end/sobre.html
@@ -15,22 +15,22 @@
       <img class="me-3" width="50" height="auto" src="../imagens/logo.svg" alt="">
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li class="nav-item rounded"><a href="index.html" class="nav-link text-dark ">Home</a></li>
-        <li class="nav-item"><a href="projetos.html" class="nav-link text-dark">Projetos</a></li>
+        <li class="nav-item rounded"><a href="../front-end/index.html" class="nav-link text-dark ">Home</a></li>
+        <li class="nav-item"><a href="../front-end/projetos.html" class="nav-link text-dark">Projetos</a></li>
         <li class="nav-item"><a href="" class="nav-link text-dark border rounded-pill">Sobre</a></li>
-        <li class="nav-item"><a href="contato.html" class="nav-link text-dark">Contato</a></li>
+        <li class="nav-item"><a href="../front-end/contato.html" class="nav-link text-dark">Contato</a></li>
       </ul>
 
       <div class="text-end">
-        <a href="login.html"><button type="button" class="btn btn-outline-dark me-2">Login</button></a>
-        <a href="cadastro.html"><button type="button" class="btn btn-outline-dark">Sign-up</button></a>
+        <a href="../front-end/login.html"><button type="button" class="btn btn-outline-dark me-2">Login</button></a>
+        <a href="../front-end/cadastro.html"><button type="button" class="btn btn-outline-dark">Sign-up</button></a>
       </div>
     </div>
   </nav>
 
   <header class="container-fluid d-flex flex-row justify-content-between">
 
-    <img  src="imagens/pexels-alexander-grey-1148998.jpg" class="img-fluid rounded w-50" alt="Imagem">
+    <img  src="../imagens/pexels-alexander-grey-1148998.jpg" class="img-fluid rounded w-50" alt="Imagem">
 
     <div class="d-flex flex-row">
       <div class=" d-flex flex-column align-items-start justify-content-center p-5">
@@ -89,7 +89,7 @@
     <div class="container">
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top container">
         <div class="col mb-3">
-          <a href="index.html" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
+          <a href="../front-end/index.html" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="imagens/logo.svg"></use></svg>
           </a>
           <p class="text-body-secondary">© 2023</p>
