--- a/front-end/cadastro.html
+++ b/front-end/cadastro.html
@@ -8,7 +8,7 @@
   <link href='https://fonts.google.com/specimen/Chivo' rel='stylesheet' type='text/css'>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
@@ -37,16 +37,21 @@
   <main class="center">
     <h1 class="text-white text-center">Cadastro</h1>
     <div class="container-login w-75 mt-4">
+
       <h7 class="text-white">Email:</h7>
       <input type="email" id="email" placeholder="E-mail">
+
       <h7 class="text-white">Nome:</h7>
-      <input type="text" id="password" placeholder="Nome">
+      <input type="text" id="nome-login" placeholder="Nome">
+
       <h7 class="text-white">Senha:</h7>
-      <input type="password" id="email-login" placeholder="Senha">
+      <input type="password" id="password" placeholder="Senha">
+
       <h7 class="text-white">Conferir Senha:</h7>
       <input type="password" id="password-login" placeholder="Conferir Senha">
+
       <div class="ButtonLogin">
-        <button id="idCadastrar" onclick="createlogin()">Cadastrar</button>
+        <button id="idCadastrar" onclick="createLogin()">Cadastrar</button>
       </div>
     </div>
 
@@ -90,6 +95,6 @@
 
 <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
-<script src="../back-end/app.js"></script>
+<script src="app.js"></script>
 
 </html>
