--- a/front-end/sobre.html
+++ b/front-end/sobre.html
@@ -43,42 +43,60 @@
   </header>
 
   <main>
-    <div class="col-lg-10">
-      <div class="d-flex flex-row">
-        <div class=" d-flex flex-column align-items-start justify-content-center p-3">
-          <h2 class="featurette-heading fw-normal lh-1">Nossa Missão</h2>
-          <p>Nossa missão é simples, mas poderosa: tornar o mundo um lugar mais inclusivo e justo. Acreditamos que a inclusão é um direito fundamental de todos, não um privilégio de alguns. Trabalhamos para garantir que cada indivíduo tenha a chance de atingir seu potencial máximo, independentemente de sua origem, gênero, idade ou qualquer outra característica.</p>
-        </div>
-      </div>
-      <div class="d-flex flex-row">
+    <div class="background d-flex container-fluid text-start border-top p-5 align-items-center">
+      <img src="../imagens/ong-brasil.png" class="img-fluid rounded w-25" alt="">
+      <div class="p-3">
+      <h4>Nossa Missão</h4>
+      <p>Nossa missão é simples, mas poderosa: tornar o mundo um lugar mais inclusivo e justo. Acreditamos que a inclusão é um direito fundamental de todos, não um privilégio de alguns. Trabalhamos para garantir que cada indivíduo tenha a chance de atingir seu potencial máximo, independentemente de sua origem, gênero, idade ou qualquer outra característica.</p>
+    </div>
+    </div>
+
+
+
+
+      <div class="d-flex flex-row p-4">
         <div class=" d-flex flex-column align-items-start justify-content-center p-3">
           <h2 class="featurette-heading fw-normal lh-1">Nossos Objetivos</h2>
           <p>Nossos objetivos orientam nosso trabalho diário. Eles incluem a redução da desigualdade educacional, a promoção da inclusão no mercado de trabalho, o combate à discriminação, o apoio à saúde e bem-estar das comunidades carentes, o empoderamento de pessoas com deficiência e muito mais. Cada um deles é uma peça fundamental na construção de uma sociedade mais inclusiva.</p>
         </div>
       </div>
-      <img src="" alt="">
-      <div class="d-flex flex-row">
-        <div class=" d-flex flex-column align-items-start justify-content-center p-3">
-          <h2 class="featurette-heading fw-normal lh-1">Nossos Programas</h2>
-          <p>Em nossa jornada para atingir esses objetivos, desenvolvemos programas abrangentes e projetos impactantes que abordam desafios específicos que as comunidades enfrentam. Estes programas incluem educação, treinamento profissional, assistência médica, apoio psicossocial e muito mais. Cada projeto é uma oportunidade de fazer a diferença nas vidas das pessoas.</p>
-        </div>
-      </div>
-      <div class="d-flex flex-row">
-        <div class=" d-flex flex-column align-items-start justify-content-center p-3">
-          <h2 class="featurette-heading fw-normal lh-1">Junte-se a Nós</h2>
-          <p>Acreditamos que a inclusão social é uma responsabilidade compartilhada. Convidamos você a se juntar a nós nesta missão. Cadastre-se em nosso site para receber atualizações regulares sobre nosso trabalho, oportunidades de voluntariado e maneiras de apoiar nossos programas. Sua participação é essencial para o sucesso de nossa organização. </p>
-        </div>
-      </div>
-      <div class="d-flex flex-row">
-        <div class=" d-flex flex-column align-items-start justify-content-center p-3">
-          <h2 class="featurette-heading fw-normal lh-1">Fale Conosco</h2>
-          <p>Se você tiver alguma dúvida ou desejar saber mais sobre nossa organização, nossos projetos ou oportunidades de colaboração, não hesite em entrar em contato. Estamos aqui para ouvir, aprender e crescer juntos na busca por um mundo mais inclusivo.
-           <br>
-           <br> Junte-se a nós hoje e seja a mudança que deseja ver no mundo!</p>
-        </div>
-      </div>
+      <div class="text-center">
+      <img src="../imagens/ong-brasil.png" class="img-fluid rounded w-50" alt="">
     </div>
+
+      <div class="background d-flex container-fluid text-start border-top p-5 align-items-center">
+        <div class="d-flex flex-column p-2">
+        <h4>Nossos Programas</h4>
+        <p>Em nossa jornada para atingir esses objetivos, desenvolvemos programas abrangentes e projetos impactantes que abordam desafios específicos que as comunidades enfrentam. Estes programas incluem educação, treinamento profissional, assistência médica, apoio psicossocial e muito mais. Cada projeto é uma oportunidade de fazer a diferença nas vidas das pessoas.</p>
+      </div>
+      <img src="../imagens/ong-brasil.png" class="img-fluid rounded w-25" alt="">
+      </div>
+
+
+
+      <div class="d-flex container-fluid col-9 p-5 justify-content-between" >
+
+        <div class="background d-flex flex-column p-3 col-5 text-center rounded">
+          
+          <h2 class="featurette-heading ">Junte-se a Nós</h2>
+          <p>Acreditamos que a inclusão social é uma responsabilidade compartilhada. Convidamos você a se juntar a nós nesta missão. Cadastre-se em nosso site para receber atualizações regulares sobre nosso trabalho, oportunidades de voluntariado e maneiras de apoiar nossos programas. Sua participação é essencial para o sucesso de nossa organização. </p>
+      </div>
+
+        <div class="background d-flex flex-column p-3 col-5 text-center rounded ">
+          <h2 class="featurette-heading">Fale Conosco</h2>
+          <p>Se você tiver alguma dúvida ou desejar saber mais sobre nossa organização, nossos projetos ou oportunidades de colaboração, não hesite em entrar em contato. Estamos aqui para ouvir, aprender e crescer juntos na busca por um mundo mais inclusivo.
+            <div>
+            <button class="rounded"><a href="../front-end/contato.html">Contato</a></button>
+          </div>
+      </div>
+  
+    </div>
+
+
+
+
   </main>
+
 
 
 
