alteracoes no css

--- a/front-end/contato.html
+++ b/front-end/contato.html
@@ -27,14 +27,12 @@
     </div>
   </nav>
 
-
-
     <main class="pb-0 pt-3">
       <div class="text-center fw-bold pb-5 " >
         <h1>Entre em contato conosco </h1>
         <h5>Nos de sugestões e criticas e comentarios sobre nossos projetos </h5>
       </div>
-      <div {border-color: #E4F2FF;} class="contato container rounded px-5 py-5 col-sm-7">
+      <div class="contato container w-75 p-5 col-sm-7">
         <div class="row">
           <div class="col m-2">
             <h6 >Nome Completo:</h6>
