--- a/front-end/cadastro.html
+++ b/front-end/cadastro.html
@@ -34,9 +34,9 @@
     </div>
   </nav>
 
-  <main class="center">
+  <main class="mb-5">
     <h1 class="text-white text-center">Cadastro</h1>
-    <div class="container-login w-75 mt-4">
+    <div class="container container-login w-50 center p-3 mt-5 mb-2">
 
       <h7 class="text-white">Email:</h7>
       <input type="email" id="email" placeholder="E-mail">
@@ -59,7 +59,7 @@
 
   </main>
 
-  <footer class="row row-cols-md-5 py-3 my-1 d-flex  border-top  fixed-bottom justify-content-center">
+  <footer class="row row-cols-md-5 py-3 my-1 d-flex  border-top justify-content-center">
     <div class="d-flex flex-row container justify-content-around">
       <div class="col mb-2">
         <h5>páginas</h5>
