--- a/front-end/login.html
+++ b/front-end/login.html
@@ -31,7 +31,7 @@
 
 <main>
   <h1 class="text-white text-center">Login</h1>
-    <div class="container-login w-75 ">
+    <div class="container container-login w-50 center p-3 mt-5 mb-2 ">
 
         <h7 class="text-white">Email:</h7>
         <input type="email" id="email" placeholder="E-mail">
@@ -47,7 +47,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
   </main>
 
-  <footer class="row row-cols-md-5 py-3 my-1 d-flex  border-top  fixed-bottom justify-content-center">
+  <footer class="row row-cols-md-5 py-3 my-1 d-flex  border-top  justify-content-center">
     <div class="d-flex flex-row container justify-content-around">
     <div class="col mb-2">
       <h5>páginas</h5>
