alteracoes no css

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <title>Todos por Um</title>
+    <script src="../back-end/projetos.js"></script>
 </head>
 
 
@@ -19,7 +20,7 @@
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li class="nav-item rounded"><a href="#" class="nav-link text-dark border rounded-pill">Home</a></li>
-        <li class="nav-item"><a href="../front-end/projetos.html" class="nav-link text-dark">Projetos</a></li>
+        <li class="nav-item"><a href="#app" class="nav-link text-dark">Projetos</a></li>
         <li class="nav-item"><a href="../front-end/sobre.html" class="nav-link text-dark">Sobre</a></li>
         <li class="nav-item"><a href="../front-end/contato.html" class="nav-link text-dark">Contato</a></li>
       </ul>
@@ -40,7 +41,7 @@
           <h2 class="featurette-heading fw-normal lh-1">Todos por um</h2>
           <p class="lead">Somos uma organização comprometida por um propósito: promover a inclusão social. Nossa missão é clara e inspiradora: unir esforços para auxiliar e facilitar na inserção de pessoas na sociedade, independentemente de origens ou circunstâncias pessoais.</p>
         </div>
-        <img  src="../imagens/pexels-alexander-grey-1148998.jpg" class="img-fluid rounded w-50" alt="Imagem">
+        <img  src="../imagens/pexels-rdne-stock-project-7402891.jpg" class="img-fluid rounded w-50" alt="Imagem">
     </div>
 
     </header>
@@ -65,86 +66,7 @@
 </div>
 </div>
 <h2 class="p-4">Nossos Projetos</h2>   
-<div class=" container-fluid d-flex flex-row justify-content-around p-5  col-12 ">
-
-  <div class="backgroundcimagem2 flex-column p-3 col-2 text-white">
-    <div>
-    <h3>
-      Projeto 2
-    </h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus expedita commodi nulla! Esse nemo sapiente dolores ea id </p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-  </div>
-</div>
-
-
-  <div class="backgroundcimagem2 flex-column p-3 col-2 text-white">
-    <div>
-    <h3>
-      Projeto 2
-    </h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus expedita commodi nulla! Esse nemo sapiente dolores ea id </p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-  </div>
-</div>
-
-  <div class="backgroundcimagem3 flex-column p-3 col-2 text-white ">
-    <h3>
-      Projeto 3
-    </h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus expedita commodi nulla! Esse nemo sapiente dolores ea id </p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-  </div>
-
-
-
-  <div class="backgroundcimagem3 flex-column p-3 col-2 text-white ">
-    <h3>
-      Projeto 4
-    </h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus expedita commodi nulla! Esse nemo sapiente dolores ea id </p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-  </div>
-
-
-
-
+<div id="app" class="produtos container-fluid d-flex flex-row justify-content-around p-5 col-12 ">
 </div>
 
 
